Fix broken layout on larger screens

--- a/hugo/assets/scss/main.scss
+++ b/hugo/assets/scss/main.scss
@@ -14,18 +14,34 @@
   position: relative;
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: 56px auto auto;
+  grid-template-rows: 56px auto;
   grid-template-areas:
     "navbar"
-    "main"
-    "footer";
+    "main";
 
   @media (min-width: 800px) {
     grid-template-columns: 240px auto;
     grid-template-areas:
       "navbar navbar"
-      "sidebar main"
-      "sidebar footer";
+      "sidebar main";
+  }
+}
+
+.docs-home {
+  min-height: 100vh;
+  position: relative;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: 56px auto;
+  grid-template-areas:
+    "navbar"
+    "main";
+
+  @media (min-width: 800px) {
+    grid-template-columns: auto;
+    grid-template-areas:
+      "navbar"
+      "main";
   }
 }
 
@@ -63,7 +79,13 @@
   background-color: var(--grey-50);
 }
 
+.docs-page {
+  display: flex;
+  flex-direction: column;
+}
+
 .docs-main {
+  flex-grow: 1;
   display: grid;
   max-width: 100vw;
   gap: 2rem;
@@ -79,7 +101,7 @@
 
   @media (min-width: 1000px) {
     grid-template-columns: auto 200px;
-    grid-template-rows: auto auto;
+    grid-template-rows: max-content auto;
     grid-template-areas:
       "meta toc"
       "article toc";
@@ -437,9 +459,27 @@
 }
 
 // Text marketing
-.text-marketing {
+.text-marketing-css {
   display: inline-block;
-  background-image: linear-gradient(-45deg, var(--pink-600), var(--amber-600));
+  background-image: linear-gradient(135deg, var(--amber-600), var(--pink-600));
+  background-clip: text;
+  /* stylelint-disable-next-line property-no-vendor-prefix */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.text-marketing-ui {
+  display: inline-block;
+  background-image: linear-gradient(135deg, var(--lime-600), var(--cyan-600));
+  background-clip: text;
+  /* stylelint-disable-next-line property-no-vendor-prefix */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.text-marketing-icons {
+  display: inline-block;
+  background-image: linear-gradient(135deg, var(--blue-600), var(--violet-600));
   background-clip: text;
   /* stylelint-disable-next-line property-no-vendor-prefix */
   -webkit-background-clip: text;
